tests/ui/type-alias-impl-trait/generic_duplicate_param_use4.stderr
error[E0277]: `U` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use4.rs:12:5
   |
LL |     u
   |     ^ `U` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
note: required by a bound in an opaque type
  --> $DIR/generic_duplicate_param_use4.rs:8:23
   |
LL | type Two<T, U> = impl Debug;
   |                       ^^^^^
note: this definition site has more where clauses than the opaque type
  --> $DIR/generic_duplicate_param_use4.rs:11:1
   |
LL | fn three<T, U: Debug>(_: T, u: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider restricting type parameter `U` with trait `Debug`
   |
LL | type Two<T, U: std::fmt::Debug> = impl Debug;
   |              +++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
